# whatsapp

./: .gitignore  index.html  package-lock.json  package.json
.github/workflows/: release.yml
flatpak/: com.whatsapp.tauri.yml  com.whatsapp.unofficial.yml
parts/whatsapp-unofficial/run/: build.sh  environment.sh
parts/whatsapp-unofficial/src/usr/share/applications/: WhatsApp.desktop
parts/whatsapp-unofficial/state/: build  prime  pull  stage
prime/meta/: snap.yaml
prime/meta/gui/: whatsapp-unofficial.desktop
scripts/: build-release.sh  generate-icons.sh
snap/: snapcraft.yaml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  setup.rs  tray.rs
src-tauri/src/commands/: audio.rs  mod.rs  session.rs  tray.rs  window.rs
src/components/: AudioDeviceSelector.tsx  TitleBar.tsx
src/hooks/: useNotificationBridge.ts  useWindowState.ts
src/lib/: tauri-ipc.ts
src/store/: settings.ts
src/styles/: index.css
src/views/: SettingsView.tsx  WhatsAppView.tsx
